# FastGPT

./: .gitignore  .npmrc  Dockerfile.app  pnpm-lock.yaml
.agentdocs/: index.md
.agentdocs/backend/: api-aicp_platform.md  api-router-guide.md  app-module-design.md  dataset-module-design.md  train-module-design.md
.agentdocs/feedback/: code-error.md  debug-error.md  suggest.md
.agentdocs/prd/: smart-customer-service.md
.agentdocs/testing/: mongodb-setup.md
.agentdocs/workflow/: 250112-train-module-dataset-trainset.md  250112-train-module-external-mocks.md  250112-train-module-foundation.md  250112-train-module-integration.md  250112-train-module-trainset-data.md
.agentdocs/workflow/done/: 250112-train-module-app-trainset-basic.md  250112-train-module-integration.md  250112-train-module-train-task.md
.claude/: settings.local.json
deployments/chart/: Chart.yaml  values.yaml
deployments/chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
document/content/docs/introduction/: commercial.mdx  index.mdx
image/: Dockerfile
plugins/diting/: README.md  pyproject.toml
plugins/kgis/: .env.example  DEPLOYMENT.md  Dockerfile  Makefile  README.md  pyproject.toml
plugins/kgis/src/kgis/: __init__.py  main.py
plugins/kgis/src/kgis/core/: __init__.py  logging.py
plugins/kgis/src/kgis/lightrag/: __init__.py  document_routes.py  get_embedding_dimension.py  lightrag_types.py  manager.py  routes.py  types.py
projects/app/: .env  .env.template
projects/app/data/: metric.json
projects/app/src/: instrumentation.ts
projects/app/src/types/: index.d.ts
projects/sandbox/: package.json
test/e2e/: FastGPT-Rerank-Training-API.postman_collection.json  README.md
复用dataset_training方案/: 复用dataset_training方案_同义词数据标准化异步队列方案.md
方案/: 同义词数据标准化异步队列方案.md
(+121 files in other folders)
