[project]
name = "kgis"
version = "0.1.0"
description = "KGIS: knowledge grpaph information system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lightrag-hku",
  "fastapi",
  "uvicorn[standard]",
  "structlog",
  "asgi-correlation-id",
  "pydantic",
  "httpx",
  "openai>=2.8.1",
  "neo4j>=5.0.0,<7.0.0",
  "pymongo>=4.0.0,<5.0.0",
  "asyncpg>=0.29.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/kgis"]

[tool.hatch.build.targets.wheel]
packages = ["src/kgis"]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.7",
    "hatch>=1.14.1",
    "mypy>=1.15.0",
    "pytest",
    "ruff>=0.11.6",
]

# checklist
[tool.ruff]
exclude = [
  "sdk/",
  "docker/",
  "build/",
  ".git",
  "__pycache__",
  "*_pb2.py*",
  "*.pyi",
  "docs/",
]
line-length = 120
target-version = "py311"
preview = true

[tool.ruff.lint]
# 启用所有的规则
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "W", # Warning
  "N", # PEP8 Naming
  "I", # isort
  "FAST", # FastAPI
]
# 禁用的规则
ignore = []

[tool.ruff.lint.isort]
force-single-line = false

[tool.ruff.format]
line-ending = "lf"

# 类型
[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.11"
mypy_path = "./src"
explicit_package_bases = true
exclude = [
  "dist/",
  "build/",
  "docker/",
  "tests/",
]

# 单元测试
[tool.pytest.ini_options]
addopts = [
  "-rA",
  "--cov=aipaas",
]
testpaths = [
  "tests",
]

# 代码覆盖率
[tool.coverage.run]
branch = true
parallel = true
omit = [
  "**/__init__.py",
]

[tool.coverage.report]
# fail_under = 85
show_missing = true
sort = "cover"
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
]
